Version history
===============

5.0 (2016-09-15):

- changed: friend request action can now be performed by admin
- changed: friendsof pagehandler now forwards to friends page
- changed: updated minimal Elgg requirement to v2.0
- feat(pages): move pages to resource views
- feat(views): rely on core views to render requests and ajaxify actions
- fixed: notifications are now sent in recipients language
- fixed: prevent default notifications in Elgg 2.0
- Typo
- Updated french translation

4.1 (2015-12-17):

- added: admin option to disable river item creation (fixes #5)
- added: composer support
- chore: refactoring for performance and coding style

4.0 (2014-11-10):

- changes for Elgg 1.9

3.3.1 (2014-11-10):

- changed: restored the default events, couldn't find the reason for the removal (fixes #4)
- applied Elgg coding standards

3.3 (2013-04-05):

- added: Spanish translation (thanks to Iknaxio Marx http://community.elgg.org/profile/iknaxio)
- added: notification on friend accept
- added: French translation (thanks to https://github.com/GeekShadow PR #3)
- changed: layout and code cleanup
- changed: styling of topbar icon (inspired by https://github.com/minhtinh2604 PR #1)
- removed: CSS because it's no longer needed

3.2 (2012-06-11):

- added: direct link to add/remove friend in member listing
- added: Dutch translation
- added: river view now works both ways
- added: river cleanup
- fixed: small error in Englisch language file (thanks to Matt Beckett http://community.elgg.org/pg/profile/Beck24)
- fixed: old link in notification
- changed: small code optimalizations

3.1 (2012-03-02):

- added: german translation (thanks to Opteron http://community.elgg.org/pg/profile/Opteron)
- fixed: wrong link in new request notify (thanks to Lee http://community.elgg.org/pg/profile/8toenails)

3.0.2 (2011-12-23):

- fixed: river events in Elgg 1.8.1+
- changed: required Elgg version to 1.8.1

3.0.1 (2011-11-28):

- fixed: page_handler issue with Elgg 1.8.1