@@ -9,13 +9,13 @@
 		"issues": "https://github.com/ColdTrick/friend_request/issues"
 	},
 	"require": {
-		"composer/installers": "^1.0.8"
+		"composer/installers": ">=1.0.8"
 	},
 	"require-dev": {
 		"coldtrick/sniffs": "dev-master",
 		"coldtrick/releases": "dev-master"
 	},
 	"conflict": {
-		"elgg/elgg": "<2.0"
+		"elgg/elgg": "<3.3"
 	}
 }
