@@ -15,17 +15,17 @@
 		<type>elgg_release</type>
 		<version>3.0</version>
 	</requires>
-	
+
 	<requires>
-        <type>plugin</type>
-        <name>friends</name>
-    </requires>
-	
+		<type>plugin</type>
+		<name>friends</name>
+	</requires>
+
 	<requires>
-        <type>priority</type>
-        <plugin>friends</plugin>
-        <priority>after</priority>
-    </requires>
-	
- 	<category>ColdTrick</category>
+		<type>priority</type>
+		<plugin>friends</plugin>
+		<priority>after</priority>
+	</requires>
+
+	<category>ColdTrick</category>
 </plugin_manifest>
